@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST midori-0.1.1.tar.bz2 309109 RMD160 936e9f310ee1d3b9546eee8ed1806bf8d1827d53 SHA1 df1176aa584369f04e5e7e76bc4e193af0580ab0 SHA256 e0a521533e999b8541d3c8ed3cedfa6b353f66a66b2ae8c5e309485ae79bbbe7
-EBUILD midori-0.1.1.ebuild 2117 RMD160 2c3a4894ae0cbaa5fd68dae7e3159aab8b8243b4 SHA1 14bbdb4beccec37c2f93ed7177269e3f96f477ff SHA256 5811b3feaf1de390086537434123b3003656d5eec399b3493c1b5bd2f3485609
-EBUILD midori-9999.ebuild 1917 RMD160 b802659119f730c7e28ce9c003b953d30d0201af SHA1 38011801d496fcfc2ee3683435e213c3d475571c SHA256 0f8556eb1ab5218103621eb0adc0783092cdfb03b0acb0e551520ce81369dea5
-MISC ChangeLog 2031 RMD160 4ee790d3f3b8eb596db592f098baa6ca966674eb SHA1 082c27745a76c1310f26140862ae745d05f05f1c SHA256 28a80bae8c6f5be6dcdd581dce564e9c1cd3c8d56f91afebbc1b9f2144154101
+EBUILD midori-0.1.1.ebuild 2099 RMD160 0ae4e665e3041ed6bf5a55599ee2e88728a3487e SHA1 532b45f6a82f7e2f9543025b4bd2f6517d26486a SHA256 ad40899aa05fcd72565ed2cfcff11a2d1746aaa5fe544ab6d1126a15ce275b88
+EBUILD midori-9999.ebuild 1899 RMD160 1da12663fa8b91112e827e4fcfa62ee13e515286 SHA1 fac72230b3b6cb256022e2f7b420d6cfb7eac097 SHA256 acbe0d5ec326d2613038a30b1a67939778f4411ab65e545150ae17b3625762ca
+MISC ChangeLog 2187 RMD160 099a464038ea2593298a7924448265a6de1a042d SHA1 eef45168344902eec3dd2429a811751b7c783d31 SHA256 44ee0feacb580a1d1a531568ab30fe269f53023fbcd27221ece576a14c4b5991
 MISC metadata.xml 313 RMD160 4f246d861576fec820b0f47f72aaf2f65212c213 SHA1 b99c81d8904c399952cb052d3f199febdc686607 SHA256 3b38fde03519c5e4aee213c8a59510553b1cb6d9a24c69cc90ef0fb797a1012e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAklBZ2AACgkQKhnDs22gwa8exQCfbDux41RsONwOH1qyLDiKY4Np
-keEAoKju9nLRPNc5QemHz5Qx1sVta28D
-=b6hr
+iEUEARECAAYFAklDtqEACgkQKhnDs22gwa/2dACfUvJuSKZOUzffVptUjRXU8FTq
+W5EAmOseFnNwDUnaqj3vCY4rF8zE0V8=
+=+AZs
 -----END PGP SIGNATURE-----
